deploy/expose-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vista-expose-service
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: api.vista.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vista-expose-service
                port:
                  number: 80
